--- a/Hotline/Info.plist
+++ b/Hotline/Info.plist
@@ -24,12 +24,10 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 		<string>voip</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow access to camera to allow your contacts to see you.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Allow access to your microphone to talk to your contacts in a call.</string>
 </dict>
 </plist>
